client/src/components/navigation/mobileNav/mobileNav.css
.mobile-header {
  background: #ffffff;
  height: 60px;
  padding: 0 1rem;
  display: flex;
  justify-content: space-between;
  align-items: center;

  img {
    width: 32px;
    height: 48px;
  }

  .icon-mobile {
    display: flex;
    gap: 0.5rem;

    svg {
      width: 40px;
      height: 40px;
      stroke: white;
      border-radius: 10px;
      padding: 4px;
    }
  }
}

.mobile-footer {
  position: fixed;
  bottom: 0;
  width: 100%;
  height: 70px;
  background: #7f976c;
  display: flex;
  justify-content: space-around;
  align-items: center;
  .nav-item {
    order: 0;
  }

  .nav-item:first-child {
    order: 0;
  }
  .nav-item:nth-child(2) {
    order: 1;
  }
  .nav-item.synthese {
    order: 2;
  }
  .nav-item:nth-child(4) {
    order: 3;
  }
  .nav-item:nth-child(5) {
    order: 4;
  }

  img {
    width: 48px;
    height: 42px;
    background-color: #f7fdf3c4;
    border-radius: 10px;
    padding: 4px;
  }
  .center-icon {
    width: 70px;
    height: 70px;
    transform: translateY(-30px);
    background-color: white;
    border-radius: 50%;
    border: 4px solid #7f976c;
    display: flex;
    align-items: center;
    justify-content: center;
    overflow: hidden;
  }
}
.popover-button {
  all: unset;
  cursor: pointer;
  display: flex;
  align-items: center;
  justify-content: center;
  aspect-ratio: 1;
  border-radius: 50%;
  anchor-name: --popover-anchor;
}

.popover-menu {
  position: absolute;
  top: 80px;
  left: 50%;
  transform: translateX(-50%);
  margin-block-end: 8px;
  background-color: white;
  border: 3 px solid #7f976c;
  border-radius: 12px;
  width: 250px;

  padding: 2rem 1.5rem;
  opacity: 0;
  transition: opacity 0.2s ease;
}

.popover-menu:popover-open {
  display: block;
  opacity: 1;
}

.submenu-wrapper {
  display: flex;
  flex-direction: column;
  gap: 1.2rem;
}

.submenu-item {
  display: block;
  text-decoration: none;
  background-color: #d7e7c6;
  color: #2e382e;
  padding: 1rem 1.5rem;
  font-size: 1.1rem;
  border-radius: 10px;
  text-align: center;
  transition: background-color 0.2s ease;
}

.submenu-item:hover {
  background-color: #b4d29a;
}

.mobile-header,
.mobile-footer {
  display: none;
}

@media (max-width: 768px) {
  .mobile-header,
  .mobile-footer {
    display: flex;
  }
}

